language/move-lang/tests/move_check/parser/spec_parsing_fun_type_fail.move
module M {
    fun fun_type_in_prog(p: |u64|u64) {
    }
}
